# chriscarl-python

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  sandbox.py
chriscarl/core/lib/stdlib/: importlib.py
docs/: DONE.md  workflow.md
docs/concepts/: shadow-modules.md
docs/philosophy/: 2-vs-3.md  commands.md  configs.md  file-structure.md  ongoing-maintenance.md  workflow.md
src/chriscarl/core/: constants.py
src/chriscarl/core/functors/: misc.py  parse.py  python.py
src/chriscarl/core/lib/stdlib/: argparse.py  ast.py  collections.py  fnmatch.py  importlib.py  inspect.py  io.py  json.py  logging.py  os.py  re.py  subprocess.py  typing.py  unittest.py
src/chriscarl/core/lib/third/: git.py  parameterized.py
src/chriscarl/core/types/: dict.py  iterable.py  list.py  str.py  string.py  version.py
src/chriscarl/files/: __init__.py  default-descriptions.json  manifest.py
src/chriscarl/files/templates/: mod.lib.template  template  test.template  tool.template
src/chriscarl/files/templates/git/: CHANGELOG.md  README.md  pyproject.toml
src/chriscarl/mod/: all.py  python.py
src/chriscarl/mod/lib/stdlib/: logging.py
src/chriscarl/mod/lib/third/: tomllib.py
src/chriscarl/tools/: dev.py
src/chriscarl/tools/lib/: dev.py
src/chriscarl/tools/shed/: dev.py
tests/: test_chriscarl.py
tests/chriscarl/: test_core.py  test_files.py  test_mod.py  test_tools.py
tests/chriscarl/core/: test_constants.py  test_functors.py  test_lib.py  test_types.py
tests/chriscarl/core/functors/: test_misc.py  test_parse.py  test_python.py
tests/chriscarl/core/lib/: test_stdlib.py  test_third.py
tests/chriscarl/core/lib/stdlib/: test_argparse.py  test_ast.py  test_collections.py  test_fnmatch.py  test_importlib.py  test_inspect.py  test_io.py  test_json.py  test_logging.py  test_os.py  test_re.py  test_subprocess.py  test_typing.py  test_unittest.py
tests/chriscarl/core/lib/third/: test_git.py  test_parameterized.py
tests/chriscarl/core/types/: test_dict.py  test_iterable.py  test_list.py  test_str.py  test_string.py  test_version.py
tests/chriscarl/files/: test_manifest.py
tests/chriscarl/mod/: test_all.py  test_lib.py  test_python.py
tests/chriscarl/mod/lib/: test_stdlib.py  test_third.py
tests/chriscarl/mod/lib/stdlib/: test_logging.py
tests/chriscarl/mod/lib/third/: test_tomllib.py
tests/chriscarl/tools/: test_dev.py  test_lib.py  test_shed.py
tests/chriscarl/tools/lib/: test_dev.py
tests/chriscarl/tools/shed/: test_dev.py
tests/collateral/: pytest-coverage.txt
