[tool.poetry]
name = "chriscarl"
version = "0.0.0"
description = "Project that contains my everything--algorithms, data structures, tools, methodologies, tips, tricks, snippets, templates, code gen, etc."
authors = ["Chris Carl <chrisbcarl@outlook.com>"]
readme = "README.md"
package-mode = true
packages = [{include = "chriscarl", from = "src"}]
include = [
    { path = "tests", format = "sdist" },
    # it seems to include all files that are in the packages include section without the need to specify
]
repository = "https://github.com/chrisbcarl/chriscarl-python"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.urls]
changelog = "https://github.com/chrisbcarl/chriscarl-python/blob/main/CHANGELOG.md"
homepage = "https://example.com"
documentation = "https://readthedocs.org"
"bug tracker" = "https://github.com/me/spam/issues"


[tool.poetry.scripts]
dev = 'chriscarl.tools.dev:main'


[tool.poetry.dependencies]
python = "^3.9,<3.14"
six = "^1.16.0"
mypy = "^1.13.0"
tomli = { version = "^2.0.1", python = "<3.11" }
tomli-w = "^1.1.0"


[tool.poetry.group.test.dependencies]
parameterized = "^0.9.0"
pytest = "^8.3.3"
tox = "^4.23.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
types-six = "^1.16.21.20241105"
pytest-cov = "^6.0.0"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    # https://docs.pytest.org/en/latest/explanation/goodpractices.html#test-discovery
    # https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
    # allows you to have 2 test file names that are exaclty the same like a/test_lib.py and b/test_lib.py
    "--import-mode=importlib",
]


[[tool.mypy.overrides]]
module = [
    'parameterized',
]
ignore_missing_imports = true


[tool.chriscarl]
codeword = 'chaos'
created = ''
modified = ''
