[tool.poetry]
name = "{name}"
version = "{version}"
description = "{description}"
authors = {authors}
readme = "README.md"
packages = [{include = "{name}", from = "{src_root}"}]
include = [
    { path = "tests", format = "sdist" },
    # it seems to include all files that are in the packages include section without the need to specify
]
repository = ""
classifiers = [
    # "Programming Language :: Python",
    # "Development Status :: 2 - Pre-Alpha",
    # "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.urls]
changelog = ""
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# "bug tracker" = "https://github.com/me/spam/issues"


[tool.poetry.scripts]
# dev = '{name}.scripts:main'


[tool.poetry.dependencies]


[tool.poetry.group.test.dependencies]


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    # https://docs.pytest.org/en/latest/explanation/goodpractices.html#test-discovery
    # https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
    # allows you to have 2 test file names that are exaclty the same like a/test_lib.py and b/test_lib.py
    "--import-mode=importlib",
]


[[tool.mypy.overrides]]
module = [
    'parameterized',
]
ignore_missing_imports = true


[tool.chriscarl]
codeword = '{codeword}'
created = '{created}'
modified = '{modified}'
